[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "electricity-demand-forecasting"
version = "0.1.0"
description = "Modular time-series pipeline for forecasting German electricity demand"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0", "numpy>=1.24", "scipy>=1.10", "statsmodels>=0.14",
    "scikit-learn>=1.3", "matplotlib>=3.7", "requests>=2.28",
    "holidays>=0.40", "pyarrow>=12.0",
]

[project.optional-dependencies]
neural = ["tensorflow>=2.12"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
